Tested some models and made adjustments
